implementacion de autenticacion de usuarios

--- a/FRONT-END-WEB/.env.local
+++ b/FRONT-END-WEB/.env.local
@@ -1,7 +1,7 @@
 # Frontend Web Environment Variables
-REACT_APP_API_URL=http://localhost:3000/api
-REACT_APP_SUPABASE_URL=https://your-project.supabase.co
-REACT_APP_SUPABASE_ANON_KEY=your-anon-key
+REACT_APP_API_URL=http://localhost:8000/api
+REACT_APP_SUPABASE_URL=https://vhsxhehjajrunvjogarf.supabase.co
+REACT_APP_SUPABASE_ANON_KEY=sb_publishable_GVelpu6zGTgzZdf13vmOGw_9YDvpnqK
 
 # App Configuration
 REACT_APP_APP_NAME=Consulta Procesos Judiciales
