--- a/BACKEND/.env.example
+++ b/BACKEND/.env.example
@@ -7,6 +7,9 @@ SUPABASE_URL=your_supabase_project_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
+# Client Configuration
+CLIENT_URL=http://localhost:3000
+
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRES_IN=7d
