--- a/FRONT-END-WEB/package.json
+++ b/FRONT-END-WEB/package.json
@@ -33,7 +33,8 @@
     "react-table": "^7.8.0",
     "recharts": "^2.8.0",
     "tailwind-merge": "^2.1.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
