--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ BACKEND/test-diagnostics.js
 BACKEND/test-simple.js
 BACKEND/test-step-by-step.js
 SPRING-BACKEND/.env.example
+FRONT-END-WEB/node_modules/
