--- a/FRONT-END-WEB/package.json
+++ b/FRONT-END-WEB/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.2.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
@@ -38,7 +39,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
-    "@types/node": "^16.18.68",
+    "@types/node": "^16.18.126",
     "@types/react": "^18.2.43",
     "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18.2.17",
