--- a/FRONT-END-WEB/package.json
+++ b/FRONT-END-WEB/package.json
@@ -13,8 +13,9 @@
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "clsx": "^2.0.0",
+    "crypto-browserify": "^3.12.1",
     "date-fns": "^2.30.0",
-    "dotenv": "^17.2.2",
+    "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
@@ -46,13 +47,20 @@
     "@types/react-table": "^7.7.19",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "assert": "^2.1.0",
     "autoprefixer": "^10.4.16",
+    "buffer": "^6.0.3",
+    "customize-cra": "^1.0.0",
     "eslint": "^8.54.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.3.6",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "url": "^0.11.4",
+    "util": "^0.12.5"
   },
   "scripts": {
     "start": "react-scripts start",
