--- a/FRONT-END-WEB/package.json
+++ b/FRONT-END-WEB/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.16",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
