Add registration screen and navigation; update API service for local development

--- a/MOBILE-APP/.env
+++ b/MOBILE-APP/.env
@@ -1,7 +1,8 @@
 # Mobile App Environment Variables
 EXPO_PUBLIC_API_URL=http://localhost:3000/api
-EXPO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-EXPO_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+EXPO_PUBLIC_SUPABASE_URL=https://vhsxhehjajrunvjogarf.supabase.co
+EXPO_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_GVelpu6zGTgzZdf13vmOGw_9YDvpnqK
+
 
 # App Configuration
 EXPO_PUBLIC_APP_NAME=Consulta Procesos Judiciales
