--- a/MOBILE-APP/package.json
+++ b/MOBILE-APP/package.json
@@ -21,62 +21,62 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@supabase/supabase-js": "^2.39.0",
+    "axios": "^1.6.0",
+    "date-fns": "^2.30.0",
     "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
+    "expo-document-picker": "~11.5.4",
+    "expo-file-system": "~15.4.5",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
+    "expo-local-authentication": "~13.4.1",
+    "expo-notifications": "~0.20.1",
     "expo-router": "^2.0.0",
+    "expo-secure-store": "~12.3.1",
+    "expo-sharing": "~11.5.0",
     "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.11.3",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/drawer": "^6.6.6",
-    "@supabase/supabase-js": "^2.39.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "axios": "^1.6.0",
-    "react-query": "^3.39.3",
-    "react-hook-form": "^7.48.2",
-    "yup": "^1.4.0",
-    "@hookform/resolvers": "^3.3.2",
-    "date-fns": "^2.30.0",
-    "react-native-paper": "^5.11.3",
-    "react-native-vector-icons": "^10.0.2",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-svg": "13.9.0",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "expo-notifications": "~0.20.1",
-    "expo-document-picker": "~11.5.4",
-    "expo-file-system": "~15.4.5",
-    "expo-sharing": "~11.5.0",
-    "expo-camera": "~13.4.4",
-    "expo-image-picker": "~14.3.2",
-    "expo-secure-store": "~12.3.1",
-    "expo-local-authentication": "~13.4.1",
-  "react-native-modal": "^13.0.1",
-  "react-native-swipe-list-view": "^3.2.9",
-    "react-native-phone-number-input": "^2.1.0"
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-web": "~0.19.6",
+    "react-query": "^3.39.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.4.2",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.6",
-    "typescript": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
     "eslint-config-expo": "^7.0.0",
     "jest": "^29.2.1",
-    "@testing-library/react-native": "^12.4.2",
-    "react-test-renderer": "18.2.0"
+    "react-test-renderer": "18.2.0",
+    "typescript": "^5.1.3"
   },
   "expo": {
     "name": "Judicial Processes",
