--- a/FRONT-END-WEB/package.json
+++ b/FRONT-END-WEB/package.json
@@ -16,6 +16,7 @@
     "crypto-browserify": "^3.12.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.5",
+    "driver.js": "^1.4.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.16",
     "html2canvas": "^1.4.1",
